# Future-Trait-Tutorial

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EPUB_SETUP_GUIDE.md  EPUB_SUCCESS_SUMMARY.md  FUTURE_TRAIT_TUTORIAL.md  README.md  SUPPORT.md  book.toml  build_book.sh  build_epub.sh  package.json  start_book.sh
async_tutorial_tests/: Cargo.toml
async_tutorial_tests/src/: chapter2_tests.rs  chapter3_tests.rs  chapter6_tests.rs  main.rs
book/: README.md  SUMMARY.md  appendix-a-examples.md  appendix-b-api.md  appendix-c-resources.md  book.js  book.toml  chapter-01-async-fundamentals.md  chapter-01-async-fundamentals.md#async-vs-sync  chapter-02-future-trait.md  chapter-02-future-trait.md#poll-states  chapter-02-future-trait.md#waker-and-context  chapter-03-basic-async-await.md  chapter-03-basic-async-await.md#first-async-function  chapter-03-basic-async-await.md#future-laziness  chapter-03-basic-async-await.md#sequential-vs-concurrent  chapter-04-custom-futures.md#delay-future  chapter-05-combinators.md  chapter-05-combinators.md#collection-combinators  chapter-05-combinators.md#join-and-select  chapter-05-combinators.md#map-and-then  chapter-06-error-handling.md  chapter-06-error-handling.md#error-propagation  chapter-06-error-handling.md#result-in-async  chapter-07-http-client.md  chapter-07-http-client.md#async-http-requests  chapter-07-http-client.md#caching-and-rate-limiting  chapter-07-http-client.md#json-processing  chapter-08-advanced-patterns.md  chapter-08-error-handling.md  chapter-09-testing.md  chapter-10-autonomous-agent.md  chapter-10-performance.md  chapter-10-performance.md#runtime-selection  chapter-11-pitfalls.md  chapter-11-pitfalls.md#await-points  chapter-11-pitfalls.md#blocking-code  chapter-11-pitfalls.md#send-sync  custom.css  introduction.md
epub-book/: README.md  book.toml
epub-output/: The Complete Future Trait Guide.epub
src/: chapter4_tests.rs  chapter5_tests.rs  chapter6_tests.rs  (+1 more)
(+47 files in other folders)
