[package]
name = "async_tutorial_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
testcontainers = "0.15"
tempfile = "3.0"
axum = "0.7"
warp = "0.3"
lapin = { version = "3.0.0-beta.3" }
proptest = "1.0"